@@ -560,6 +560,7 @@ t/data/rendered/actions_annotator.html
 t/data/rendered/actions_engineer.html
 t/data/rendered/actions_loader.html
 t/data/rendered/actions_public.html
+t/data/rendered/images/AVITI24.png
 t/data/rendered/images/HS2.png
 t/data/rendered/images/HS3.png
 t/data/rendered/images/MS1.png
