@@ -1,5 +1,8 @@
 LIST OF CHANGES
 
+ - Updated instrument image generation so that the rendered image for Elembio
+   instruments is correct.
+
 release 105.7.0 (2025-08-18)
  - Isolate the RunParameters.json parser from the Monitor::Elembio::RunFolder
    into Monitor::Elembio::RunParametersParser
